k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
  namespace: todo
spec:
  selector: { app: todo-api }
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
